# podd-huseli-us-backend

./: .gitignore  README.md  pull-and-reload  pyproject.toml  upgrade-spodcat-backend  uwsgi.ini
src/podd_backend/: admin.py  azure.py  middleware.py  models.py  settings.py  urls.py
src/podd_backend/management/commands/: get_audio_request_logs.py
src/podd_backend/migrations/: 0001_initial.py
